--- a/hrms_project/requirements.txt
+++ b/hrms_project/requirements.txt
@@ -26,7 +26,7 @@ decorator==5.1.1
 defusedxml==0.7.1
 deprecation==2.1.0
 Django==5.1
-djangorestframework==3.13.1
+django-debug-toolbar==4.4.6
 exceptiongroup==1.2.1
 executing==2.0.1
 fastjsonschema==2.20.0
@@ -38,6 +38,7 @@ fsspec==2024.6.1
 gitdb==4.0.11
 GitPython==3.1.43
 gotrue==2.7.0
+gunicorn==23.0.0
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
@@ -94,7 +95,6 @@ postgrest==0.16.10
 prometheus_client==0.20.0
 prompt_toolkit==3.0.47
 psutil==6.0.0
-psycopg2==2.9.5
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.22
@@ -103,7 +103,7 @@ pydantic_core==2.20.1
 Pygments==2.18.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
-python-dotenv-1.0.1
+python-dotenv==1.0.1
 python-json-logger==2.0.7
 pytz==2024.1
 PyYAML==6.0.1
@@ -126,7 +126,7 @@ sqlparse==0.5.1
 stack-data==0.6.3
 storage3==0.7.7
 StrEnum==0.4.15
-supabase==2.7.1
+supabase==2.7.2
 supafunc==0.5.1
 sympy==1.13.0
 tenacity==8.5.0
